<resources>
    <string name="app_name">Sharknet</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="create">New</string>
    <string name="go">Go</string>
    <string name="title_activity_contacts">Contacts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="AppName">Sharknet</string>
    <string name="sharknet_logo">Sharknet Logo</string>
    <string name="chat">Chat</string>
    <string name="timeline">Timeline</string>
    <string name="profile">Profile</string>
    <string name="Contacts">Contacts</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="name">Name</string>
    <string name="default_msg">Text aus der Nachricht</string>
    <string name="title_activity_chat_detail">ChatDetailActivity</string>
    <string name="title_activity_chat_new">Create new Chat</string>
    <string name="new_chat">Chat title</string>
    <string name="title_activity_con_detail_view">Contact</string>
    <string name="pro_edit">My Profile</string>
    <string name="pro_interests">My Interests</string>
    <string name="pro_email">My e-Mails</string>
    <string name="pro_keys">My Keys</string>
    <string name="title_activity_profile_detail">My Profile</string>
    <string name="pro_nickname">Nickname</string>
    <string name="pro_email_label">e-Mail</string>
    <string name="send">send</string>
    <string name="write_a_message">write a message</string>
    <string name="title_activity_con_new">New Contact</string>
    <string name="prifiel_image">Prifiel Image</string>
    <string name="e_mail">e-Mail</string>
    <string name="email_fake">your@email.com</string>
    <string name="phone">Phone</string>
    <string name="phone_fake">0305655434</string>
    <string name="note">Note</string>
    <string name="some_notes">some notes</string>
    <string name="title_activity_profile_detail_interests">Interests</string>
    <string name="title_activity_timeline_detail_view">New Feed</string>
    <string name="title">Title</string>
    <string name="title_activity_profile_settings">Settings</string>
    <string name="nfc">NFC</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="tcp">TCP</string>
    <string name="wifi">Wifi</string>
    <string name="radar">Radar</string>
    <string name="title_activity_new_interest">New Interest</string>
    <string name="links">links</string>
    <string name="rechts">rechts</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="profileimage">ProfileImage</string>
    <string name="feeds">Feeds</string>
    <string name="system">System</string>
    <string name="_1_message_unread">1 message unread</string>
    <string name="delete">delete</string>
    <string name="blacklist">blacklist</string>
    <string name="me">Me</string>
</resources>
