<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
            >
        <item
                android:id="@+id/chat"
                android:title="@string/chat"
                />
        <item
                android:id="@+id/profile"
                android:title="@string/profile"/>
        <item
                android:id="@+id/timeline"
                android:title="@string/timeline"/>
        <item
                android:id="@+id/contact"
                android:title="@string/Contact"/>
        <item
                android:id="@+id/inbox"
                android:title="@string/title_activity_inbox"/>
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:title="@string/about"/>
            <item
                    android:id="@+id/nav_send"
                    android:title="@string/help"/>
        </menu>
    </item>

</menu>
