<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/save"
          android:icon="@drawable/ic_check_white_48dp"
          android:title="@string/save"
          app:showAsAction="always"/>
    <item android:id="@+id/nfc"
          android:title="@string/nfc"
          android:orderInCategory="100"
          android:icon="@drawable/ic_nfc_white_48dp"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/block"
          android:title="@string/blacklist"
          app:showAsAction="never"/>
    <item android:id="@+id/delete"
          android:title="@string/delete"
          app:showAsAction="never"/>
</menu>
