<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile_settings"
        tools:context="berlin.htw.schneider.viktor.sharknet.ProfileSettings">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentTop="true"

    >

        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc"
                android:id="@+id/settings_nfc" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                android:id="@+id/settings_bluetooth" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Switch android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tcp"
                android:id="@+id/settings_tcp" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Switch android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:id="@+id/settings_wifi" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Switch android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/e_mail"
                android:id="@+id/settings_email" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Switch android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/radar"
                android:id="@+id/settings_radar" android:layout_gravity="center_horizontal" android:checked="false"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sync_spinner"/>
    </LinearLayout>
</RelativeLayout>
