<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="363dp"
                android:layout_height="117dp"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:src="@drawable/ic_chevron_left_pink_a200_48dp"

                android:onClick="backProfile"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/links"
                android:background="@color/abc_primary_text_material_light"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/userid"
                    android:hint="@string/nickname"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:password="false"
                    android:hint="@string/password" android:background="@color/abc_search_url_text"/>
        </LinearLayout>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:src="@drawable/ic_chevron_right_pink_a200_48dp"
                android:onClick="nextProfile"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/rechts"
                android:background="@color/abc_background_cache_hint_selector_material_light"/>
    </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center">
            <Button
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:id="@+id/create"
            />
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/go"
                    android:id="@+id/go"
                    android:onClick="openChat"
                    android:layout_weight="0.32"/>
        </LinearLayout>
    </LinearLayout>

