<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_profile"
        tools:context="berlin.htw.schneider.viktor.sharknet.Profile">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <Button
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_primary_text_material_dark"
                android:backgroundTint="@color/sharknet"
                android:text="@string/pro_edit"
                android:id="@+id/pro_edit_button" android:layout_gravity="center_horizontal"
                android:onClick="callProfileDetail"
        />
        <Button android:layout_width="227dp" android:layout_height="wrap_content" android:text="@string/pro_interests"
                android:id="@+id/pro_interests_button" android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/sharknet"
                android:textColor="@color/abc_primary_text_material_dark"
                android:onClick="callProfileDetailInterests"/>
        <Button
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/sharknet"
                android:textColor="@color/abc_primary_text_material_dark"
                android:text="@string/pro_keys"
                android:id="@+id/pro_keys_button" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
